# shelvr

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  SECURITY.md  alembic.ini  pyproject.toml  shelvr.toml.example
.github/workflows/: auto-merge.yml  build-installer.yml  ci.yml  release.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_user_auth_fields_and_refresh_tokens.py  0003_reading_progress_per_user.py  0004_add_bookmarks_table.py  0005_add_highlights_table.py
docs/: KICKOFF.md  STRATEGY.md
installer/: README.md  shelvrd.spec  shelvrd_entry.py
plugins/hello_world/: __init__.py  plugin.toml
shelvr/: __init__.py  cli.py  config.py  logging_config.py  main.py  web.py
shelvr/api/: __init__.py  deps.py
shelvr/api/v1/: __init__.py  auth.py  (+7 more)
shelvr/auth/: deps.py  passwords.py  service.py  tokens.py
shelvr/db/: __init__.py  base.py  session.py
shelvr/formats/: __init__.py  base.py  epub.py  mobi.py  pdf.py
shelvr/plugins/: __init__.py  base.py  context.py  exceptions.py  loader.py  manifest.py  registry.py
shelvr/repositories/: __init__.py  bookmarks.py  books.py  highlights.py  plugin_state.py  reading_progress.py  refresh_tokens.py  users.py
shelvr/schemas/: __init__.py  auth.py  book.py  bookmark.py  highlight.py  plugin.py  reading_progress.py  sync.py
shelvr/services/: __init__.py  covers.py  file_layout.py  hashing.py  importer.py  plugin_upload.py
tests/: conftest.py
tests/integration/: test_auth_endpoints.py  test_auth_gating.py  test_book_repository.py  test_bookmarks.py  test_books_admin.py  test_books_api.py  test_builtin_epub.py  test_builtin_mobi.py  test_builtin_pdf.py  test_cli_user_create.py  test_facets_and_filters.py  test_fire_handler.py  test_hello_world_plugin.py  test_highlights.py  test_importer.py  test_importer_fires_hook.py  test_migrations.py  test_opds.py  test_password_change.py  test_plugin_registry.py  test_plugin_upload.py  test_plugins_api.py  test_reading_progress.py  test_series.py  test_server_info.py  test_sync_locator.py  test_username_change.py  test_web_mount.py
tests/unit/: test_config.py  test_covers.py  test_db_models.py  test_file_layout.py  test_formats_base.py  test_formats_epub.py  test_formats_mobi.py  test_formats_pdf.py  test_formats_registry.py  test_hashing.py  test_logging_config.py  test_passwords.py  test_plugin_base.py  test_plugin_loader.py  test_plugin_manifest.py  test_schemas_book.py  test_tokens.py
web/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  main.tsx
(+51 files in other folders)
